Fill in all missing data

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,12 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/fishing.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Guild Fisher</title>
+    <style>
+      @font-face {
+        font-family: 'PT Serif';
+        src: local('PT Serif'), url('%PUBLIC_URL%/PTSerif/PTSerif-Regular.ttf') format('truetype');
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
